--- a/src/App.css
+++ b/src/App.css
@@ -136,7 +136,7 @@
 }
 
 #button-car #counter-button{
-  background-color: rgb(0, 255, 0);
+  background-color: #0776D8;
   width: 30px;
   height: 30px;
   display: flex;
@@ -163,6 +163,7 @@
   bottom: 0px;
   color: white;
   align-items: center;
+  justify-content: space-between;
   font-weight: bold;
   font-size: 40px;
   z-index: 2;
