--- a/src/Views/MenuIceCream.css
+++ b/src/Views/MenuIceCream.css
@@ -18,8 +18,8 @@
 }
 
 
-#Header-menu {
-    background:url('../Images/pizza.jpeg');
+#Header-menu-ice {
+    background:url('../Images/helados.jpeg');
     background-repeat: repeat;
     background-size: cover;
     color: white;
@@ -30,7 +30,7 @@
     flex-direction: column;
   }
 
-  #Header-menu #alphaAdd{
+  #Header-menu-ice #alphaAdd{
       background: rgba(0,0,0,0.2);
       display: flex;
       position: relative;
@@ -42,7 +42,7 @@
       justify-content: center;
   }
 
-  #Header-menu img{
+  #Header-menu-ice img{
       width: 40px;
       height: 40px;
       position: absolute;
