--- a/src/Views/CarBuy.css
+++ b/src/Views/CarBuy.css
@@ -65,12 +65,12 @@
 
   #shopping-cart #product{
       color: black;
-      width: 100%;
+      width: 80%;
       margin-bottom: 10px;
       margin-top: 10px;
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: space-between;
   }
 
   #payment-container{
@@ -85,6 +85,10 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
+  }
+
+  #payment-container h3{
+      color: black;
   }
 
   #price-text{
@@ -112,4 +116,19 @@
       height:150px;
       border-radius: 75px;
       margin-right: 10px;
+  }
+
+  #product #button-delete{
+      background-color: gray;
+      width: 40px;
+      height: 40px;
+      border-radius: 20px;
+      display: flex;
+      align-items: center;
+  }
+
+  #button-delete img{
+      width: 30px;
+      height: 30px;
+      margin-left: 4px;
   }
